--- a/website/docs/opengl/sources/1.2-final-result.md
+++ b/website/docs/opengl/sources/1.2-final-result.md
@@ -1,4 +1,4 @@
-# Source code of Chapter 1, Tutorial 2, Section 8
+# Final source code of Chapter 1, Tutorial 2.
 
 ```cs
 using System;
@@ -24,7 +24,7 @@ public class Program
     {
         WindowOptions options = WindowOptions.Default;
         options.Size = new Vector2D<int>(800, 600);
-        options.Title = "1.1 - Drawing a Quad";
+        options.Title = "1.2 - Drawing a Quad";
 
         _window = Window.Create(options);
         
@@ -59,7 +59,7 @@ public class Program
 
         // Upload the vertices data to the VBO.
         fixed (float* buf = vertices)
-            _gl.BufferData(BufferTargetARB.ArrayBuffer, (nuint) vertices.Length, buf, BufferUsageARB.StaticDraw);
+            _gl.BufferData(BufferTargetARB.ArrayBuffer, (nuint) (vertices.Length * sizeof(float)), buf, BufferUsageARB.StaticDraw);
 
         // The quad indices data.
         uint[] indices =
@@ -74,7 +74,7 @@ public class Program
 
         // Upload the indices data to the EBO.
         fixed (uint* buf = indices)
-            _gl.BufferData(BufferTargetARB.ArrayBuffer, (nuint) vertices.Length, buf, BufferUsageARB.StaticDraw);
+            _gl.BufferData(BufferTargetARB.ElementArrayBuffer, (nuint) (indices.Length * sizeof(uint)), buf, BufferUsageARB.StaticDraw);
 
         const string vertexCode = @"
 #version 330 core
@@ -143,9 +143,13 @@ void main()
 
     private static void OnUpdate(double dt) { }
     
-    private static void OnRender(double dt)
+    private static unsafe void OnRender(double dt)
     {
         _gl.Clear(ClearBufferMask.ColorBufferBit);
+
+	_gl.BindVertexArray(_vao);
+	_gl.UseProgram(_program);
+	_gl.DrawElements(PrimitiveType.Triangles, 6, DrawElementsType.UnsignedInt, null);
     }
 }
 ```
