changes and fixes i found while reading through

--- a/website/docs/opengl/sources/1.2.2-clear-window.md
+++ b/website/docs/opengl/sources/1.2.2-clear-window.md
@@ -30,7 +30,7 @@ public class Program
 
     private static void OnLoad()
     {
-        _gl = GL.GetApi(_window);
+        _gl = _window.CreateOpenGL();
         
         _gl.ClearColor(Color.CornflowerBlue);
     }
