--- a/website/docs/opengl/sources/1.2-final-result.md
+++ b/website/docs/opengl/sources/1.2-final-result.md
@@ -36,7 +36,7 @@ public class Program
 
     private static unsafe void OnLoad()
     {
-        _gl = GL.GetApi(_window);
+        _gl = _window.CreateOpenGL();
         
         _gl.ClearColor(Color.CornflowerBlue);
 
@@ -50,7 +50,7 @@ public class Program
             0.5f,  0.5f, 0.0f,
             0.5f, -0.5f, 0.0f,
             -0.5f, -0.5f, 0.0f,
-            -0.5f,  0.5f, 0.5f
+            -0.5f,  0.5f, 0.0f
         };
 
         // Create the VBO.
@@ -147,9 +147,9 @@ void main()
     {
         _gl.Clear(ClearBufferMask.ColorBufferBit);
 
-	_gl.BindVertexArray(_vao);
-	_gl.UseProgram(_program);
-	_gl.DrawElements(PrimitiveType.Triangles, 6, DrawElementsType.UnsignedInt, null);
+	    _gl.BindVertexArray(_vao);
+	    _gl.UseProgram(_program);
+	    _gl.DrawElements(PrimitiveType.Triangles, 6, DrawElementsType.UnsignedInt, null);
     }
 }
 ```
