--- a/website/docs/opengl/sources/1.2.7-finished-setup.md
+++ b/website/docs/opengl/sources/1.2.7-finished-setup.md
@@ -36,7 +36,7 @@ public class Program
 
     private static unsafe void OnLoad()
     {
-        _gl = GL.GetApi(_window);
+        _gl = _window.CreateOpenGL();
         
         _gl.ClearColor(Color.CornflowerBlue);
 
@@ -50,7 +50,7 @@ public class Program
             0.5f,  0.5f, 0.0f,
             0.5f, -0.5f, 0.0f,
             -0.5f, -0.5f, 0.0f,
-            -0.5f,  0.5f, 0.5f
+            -0.5f,  0.5f, 0.0f
         };
 
         // Create the VBO.
