replaced null with (void*) 0

--- a/website/docs/opengl/sources/1.2-final-result.md
+++ b/website/docs/opengl/sources/1.2-final-result.md
@@ -149,7 +149,7 @@ void main()
 
 	    _gl.BindVertexArray(_vao);
 	    _gl.UseProgram(_program);
-	    _gl.DrawElements(PrimitiveType.Triangles, 6, DrawElementsType.UnsignedInt, null);
+	    _gl.DrawElements(PrimitiveType.Triangles, 6, DrawElementsType.UnsignedInt, (void*) 0);
     }
 }
 ```
