--- a/website/blog/apr-2023/silk2170.md
+++ b/website/blog/apr-2023/silk2170.md
@@ -16,7 +16,7 @@
 
 Are you tired of wading through messy code to achieve the smooth performance you need for your GPU applications? If so, it's time to upgrade to Silk.NET 2.17. This latest update delivers faster, cleaner code and a smoother experience than ever before, making it the easiest way to achieve top-tier performance without sacrificing usability. With Silk.NET 2.17, you can experience the power of clean code, achieve silky-smooth performance, and write code that feels right at home with the rest of your C# code.
 
-Reworked DirectX bindings, WebGPU bindings, Direct2D, DirectComposition, DirectWrite, D3D11-on-12, Android 12, Windows on ARM64 support, better AOT support, drop-in DXVK support, and a whole lot of enhancements & bugfixes. There's something for everyone in Silk.NET 2.17, the largest user experience improvement update to date. Find out what's new in 2.17!
+Reworked DirectX bindings, new WebGPU, Direct2D, DirectComposition, DirectWrite, and D3D11-on-12 bindings, as well as better support for Android 12, Windows on ARM64, reflection-free NativeAOT, and drop-in DXVK support. This, coupled with a whole lot of other enhancements & bugfixes mean there's something for everyone in Silk.NET 2.17, the largest user experience improvement update to date. Find out what's new in 2.17!
 
 Today, we’re releasing Silk.NET 2.17, and we're not kidding when we say it's this is the largest user experience improvement we've done so far. Silk.NET 2.17 is the culmination of just over 8 months of work by lots of people, and we're so glad to finally release it!
 
@@ -145,9 +145,9 @@ Please note these bindings do not work in browsers yet due to issues with the .N
 
 Development Lead: Andrew Davis (@curin) \[Silk.NET Community\]
 
-In addition to the major improvements in usability for our DirectX family of bindings, we're excited to announce that Silk.NET 2.17 also includes bindings for Direct2D, DirectComposition, DirectWrite, and WIC. Direct2D has been among the most requested features from our users, and we're thrilled to be able to deliver on them with this release.
+In addition to the major improvements in usability for our DirectX family of bindings, we're excited to announce that Silk.NET 2.17 also includes bindings for Direct2D, DirectComposition, and DirectWrite. Direct2D has been among the most requested features from our users, and we're thrilled to be able to deliver on them with this release.
 
-Direct2D is a 2D vector graphics application programming interface (API) that allows for the creation of visually rich 2D graphics. This marks our first binding to a native library dedicated solely to vector graphics. On the other hand, DirectComposition provides advanced compositing and visual effects capabilities to enable high-performance bitmap composition with transforms, effects, and animations. You can use our DirectComposition bindings to create visually engaging user interfaces that feature rich and fluid animated transitions from one visual to another. Finally, DirectWrite is a text layout and rendering API that supports high-quality text rendering for both display and print, quite closely integrated with Direct2D. Finally, WIC (Windows Imaging Component) is a framework for working with images and image metadata - this is again closely integrated with Direct2D.
+Direct2D is a 2D vector graphics application programming interface (API) that allows for the creation of visually rich 2D graphics. This marks our first binding to a native library dedicated solely to vector graphics. On the other hand, DirectComposition provides advanced compositing and visual effects capabilities to enable high-performance bitmap composition with transforms, effects, and animations. You can use our DirectComposition bindings to create visually engaging user interfaces that feature rich and fluid animated transitions from one visual to another. Finally, DirectWrite is a text layout and rendering API that supports high-quality text rendering for both display and print, quite 5closely integrated with Direct2D.
 
 We're especially proud to note that much of the work on these new bindings was done by a community member, @curin, who took the initiative to drive these additions. The Silk.NET team only had to do minor rework to integrate them into the library. This is a great example of how Silk.NET is a true community-driven project, with users and contributors working together to create a better development experience for everyone.
 
@@ -159,7 +159,7 @@ In Silk.NET 2.17, we focused heavily on expanding platform support and increasin
 
 In addition to expanding platform support and portability, we have also been doing increased testing on Windows on ARM using the Volterra development kit. As a result, we're excited to announce that Silk.NET is now fully compatible with Windows on ARM. While your mileage with the Volterra graphics drivers may vary, we have added D3D11-on-12 bindings in 2.17 to allow developers to wield the Direct3D 11 API you all know and love using the Direct3D 12 drivers, which tend to be in better shape on newer devices. 
 
-But perhaps the biggest news is the newfound portability of Silk.NET across different operating systems. For developers who prefer DirectX over other graphics APIs, they can now use the Direct3D bindings they love almost out-of-the-box on Linux and macOS using the DXVK and VKD3D native libraries, which Silk.NET now has full support for. In fact, we've made one of our examples DXVK compatible, and it only took just a few lines of code changes to make it fully portable across all three major desktop operating systems using Silk.NET.Windowing.
+But perhaps the biggest news is the newfound portability of Silk.NET across different operating systems. For developers who prefer DirectX over other graphics APIs, they can now use the Direct3D bindings they love almost out-of-the-box on Linux using the DXVK and VKD3D native libraries, which Silk.NET now has full support for. In fact, we've made one of our examples DXVK compatible, and it only took just a few lines of code changes to make it fully portable across all three major desktop operating systems using Silk.NET.Windowing.
 
 ## Closing
 Silk.NET 2.17 is here, and it brings a lot of improvements to the table. With faster, cleaner code and a smoother experience, Silk.NET 2.17 is the best way to achieve top-tier performance while also writing code that feels right at home with the rest of your C# codebase. This latest update delivers reworked DirectX bindings, WebGPU bindings, Direct2D, DirectComposition, DirectWrite, D3D11-on-12, Android 12, Windows on ARM64 support, better AOT support, drop-in DXVK support, and a host of enhancements and bug fixes. In short, Silk.NET 2.17 is the largest user experience improvement we've done so far, and we've barely even scratched the surface in this blog post! (Did you see those patch notes?!)
