Add clarifications and slight rewording
We dont want to give people the false impression that we support D3D12 natively on linux

--- a/website/blog/apr-2023/silk2170.md
+++ b/website/blog/apr-2023/silk2170.md
@@ -16,7 +16,7 @@
 
 Are you tired of wading through messy code to achieve the smooth performance you need for your GPU applications? If so, it's time to upgrade to Silk.NET 2.17. This latest update delivers faster, cleaner code and a smoother experience than ever before, making it the easiest way to achieve top-tier performance without sacrificing usability. With Silk.NET 2.17, you can experience the power of clean code, achieve silky-smooth performance, and write code that feels right at home with the rest of your C# code.
 
-Reworked DirectX bindings, new WebGPU, Direct2D, DirectComposition, DirectWrite, and D3D11-on-12 bindings, as well as better support for Android 12, Windows on ARM64, reflection-free NativeAOT, and drop-in DXVK support. This, coupled with a whole lot of other enhancements & bugfixes mean there's something for everyone in Silk.NET 2.17, the largest user experience improvement update to date. Find out what's new in 2.17!
+Reworked DirectX bindings, added new WebGPU, Direct2D, DirectComposition, DirectWrite, and D3D11-on-12 bindings, as well as better support for Android 12, Windows on ARM64, reflection-free NativeAOT, and drop-in DXVK support. This, coupled with a whole lot of other enhancements & bugfixes mean there's something for everyone in Silk.NET 2.17, the largest user experience improvement update to date. Find out what's new in 2.17!
 
 Today, we’re releasing Silk.NET 2.17, and we're not kidding when we say it's this is the largest user experience improvement we've done so far. Silk.NET 2.17 is the culmination of just over 8 months of work by lots of people, and we're so glad to finally release it!
 
@@ -159,7 +159,9 @@ In Silk.NET 2.17, we focused heavily on expanding platform support and increasin
 
 In addition to expanding platform support and portability, we have also been doing increased testing on Windows on ARM using the Volterra development kit. As a result, we're excited to announce that Silk.NET is now fully compatible with Windows on ARM. While your mileage with the Volterra graphics drivers may vary, we have added D3D11-on-12 bindings in 2.17 to allow developers to wield the Direct3D 11 API you all know and love using the Direct3D 12 drivers, which tend to be in better shape on newer devices. 
 
-But perhaps the biggest news is the newfound portability of Silk.NET across different operating systems. For developers who prefer DirectX over other graphics APIs, they can now use the Direct3D bindings they love almost out-of-the-box on Linux using the DXVK and VKD3D native libraries, which Silk.NET now has full support for. In fact, we've made one of our examples DXVK compatible, and it only took just a few lines of code changes to make it fully portable across all three major desktop operating systems using Silk.NET.Windowing.
+But perhaps the biggest news is the newfound portability of Silk.NET across different operating systems. For developers who prefer DirectX over other graphics APIs, they can now use the Direct3D bindings they love almost out-of-the-box on Linux using the DXVK and VKD3D native libraries, which Silk.NET now has full support for. In fact, we've made one of our examples DXVK compatible, and it only took just a few lines of code changes to make it fully portable across Windows and Linux using Silk.NET.Windowing. We also support DXVK to be used manually with our GLFW or SDL bindings, for those who are inclined to do so!
+
+Note: While we do use VKD3D's shader compiler to replace D3DCompiler on Windows, D3D12 through VKD3D is not supported at the moment, only D3D9 and D3D11 code will work natively on Linux. (community contributions welcome!)
 
 ## Closing
 Silk.NET 2.17 is here, and it brings a lot of improvements to the table. With faster, cleaner code and a smoother experience, Silk.NET 2.17 is the best way to achieve top-tier performance while also writing code that feels right at home with the rest of your C# codebase. This latest update delivers reworked DirectX bindings, WebGPU bindings, Direct2D, DirectComposition, DirectWrite, D3D11-on-12, Android 12, Windows on ARM64 support, better AOT support, drop-in DXVK support, and a host of enhancements and bug fixes. In short, Silk.NET 2.17 is the largest user experience improvement we've done so far, and we've barely even scratched the surface in this blog post! (Did you see those patch notes?!)
