Point 2.17 blog post to the right image file

--- a/website/blog/apr-2023/silk2170.md
+++ b/website/blog/apr-2023/silk2170.md
@@ -137,7 +137,7 @@ We've added bindings to the experimental [webgpu-headers](https://github.com/web
 
 While these bindings have "web" in the name, using either the Dawn or WGPU implementations of WebGPU (for which we ship native binaries) you can use this as a single API to target all of the various platforms that would otherwise have platform-specific APIs! This allows you to write truly write-once-run-everywhere code.
 
-<?# FancyImage "../../images/blog/apr-2023/wgpuquad.jpg" "The Silk.NET logo rendered using WebGPU." "The Silk.NET logo rendered using WebGPU." /?>
+<?# FancyImage "../../images/blog/apr-2023/wgpuquad.png" "The Silk.NET logo rendered using WebGPU." "The Silk.NET logo rendered using WebGPU." /?>
 
 Please note these bindings do not work in browsers yet due to issues with the .NET WebAssembly runtime.
 
