Rename dt parameter to deltaTime

--- a/website/docs/opengl/sources/1.1-final-result.md
+++ b/website/docs/opengl/sources/1.1-final-result.md
@@ -36,12 +36,12 @@ public class Program
     }
 
     // These two methods are unused for this tutorial, aside from the logging we added earlier.
-    private static void OnUpdate(double dt)
+    private static void OnUpdate(double deltaTime)
     {
         Console.WriteLine("Update!");
     }
 
-    private static void OnRender(double dt)
+    private static void OnRender(double deltaTime)
     {
         Console.WriteLine("Render!");
     }
