--- a/website/docs/opengl/sources/1.2-final-result.md
+++ b/website/docs/opengl/sources/1.2-final-result.md
@@ -139,9 +139,9 @@ void main()
         _gl.BindBuffer(BufferTargetARB.ElementArrayBuffer, 0);
     }
 
-    private static void OnUpdate(double dt) { }
+    private static void OnUpdate(double deltaTime) { }
     
-    private static unsafe void OnRender(double dt)
+    private static unsafe void OnRender(double deltaTime)
     {
         _gl.Clear(ClearBufferMask.ColorBufferBit);
 
