--- a/website/docs/opengl/sources/1.2.2-clear-window.md
+++ b/website/docs/opengl/sources/1.2.2-clear-window.md
@@ -35,9 +35,9 @@ public class Program
         _gl.ClearColor(Color.CornflowerBlue);
     }
 
-    private static void OnUpdate(double dt) { }
+    private static void OnUpdate(double deltaTime) { }
     
-    private static void OnRender(double dt)
+    private static void OnRender(double deltaTime)
     {
         _gl.Clear(ClearBufferMask.ColorBufferBit);
     }
