Perksey and ThomasMiz changing requests

--- a/website/docs/opengl/sources/1.3-final-result.md
+++ b/website/docs/opengl/sources/1.3-final-result.md
@@ -84,34 +84,34 @@ public class Program
             _gl.BufferData(BufferTargetARB.ElementArrayBuffer, (nuint)(indices.Length * sizeof(uint)), buf, BufferUsageARB.StaticDraw);
 
         const string vertexCode = @"
-        #version 330 core
+#version 330 core
 
-        layout (location = 0) in vec3 aPosition;
-        layout (location = 1) in vec2 aTextureCoord;
+layout (location = 0) in vec3 aPosition;
+layout (location = 1) in vec2 aTextureCoord;
 
-        out vec2 frag_texCoords;
+out vec2 frag_texCoords;
 
 
-        void main()
-        {
-            gl_Position = vec4(aPosition, 1.0);
-            frag_texCoords = aTextureCoord;
-        }";
+void main()
+{
+    gl_Position = vec4(aPosition, 1.0);
+    frag_texCoords = aTextureCoord;
+}";
 
         const string fragmentCode = @"
-        #version 330 core
+#version 330 core
 
-        in vec2 frag_texCoords;
+in vec2 frag_texCoords;
 
-        uniform sampler2D uTexture;
+uniform sampler2D uTexture;
 
-        out vec4 out_color;
+out vec4 out_color;
 
-        void main()
-        {
-        //  -out_color = vec4(frag_texCoords.x, frag_texCoords.y, 0, 1.0);
-            out_color = texture(uTexture, frag_texCoords);
-        }";
+void main()
+{
+//  -out_color = vec4(frag_texCoords.x, frag_texCoords.y, 0, 1.0);
+     out_color = texture(uTexture, frag_texCoords);
+}";
 
         uint vertexShader = _gl.CreateShader(ShaderType.VertexShader);
         _gl.ShaderSource(vertexShader, vertexCode);
@@ -173,6 +173,9 @@ public class Program
         _gl.TextureParameter(_texture, TextureParameterName.TextureWrapT, (int)TextureWrapMode.Repeat);
         _gl.TextureParameter(_texture, TextureParameterName.TextureMinFilter, (int)TextureMinFilter.Nearest);
         _gl.TextureParameter(_texture, TextureParameterName.TextureMagFilter, (int)TextureMagFilter.Nearest);
+
+        _gl.Enable(EnableCap.Blend);
+        _gl.BlendFunc(BlendingFactor.SrcAlpha, BlendingFactor.OneMinusSrcAlpha);
 
         _gl.BindTexture(TextureTarget.Texture2D, 0);
     }
