--- a/website/docs/opengl/sources/1.3-final-result.md
+++ b/website/docs/opengl/sources/1.3-final-result.md
@@ -174,10 +174,13 @@ void main()
         _gl.TexParameterI(GLEnum.Texture2D, GLEnum.TextureMinFilter, (int)TextureMinFilter.Nearest);
         _gl.TexParameterI(GLEnum.Texture2D, GLEnum.TextureMagFilter, (int)TextureMagFilter.Nearest);
 
+        _gl.BindTexture(TextureTarget.Texture2D, 0);
+        
+        int location = _gl.GetUniformLocation(_program, "uTexture");
+        _gl.Uniform1(location, 0);
+
         _gl.Enable(EnableCap.Blend);
         _gl.BlendFunc(BlendingFactor.SrcAlpha, BlendingFactor.OneMinusSrcAlpha);
-
-        _gl.BindTexture(TextureTarget.Texture2D, 0);
     }
 
     private static void OnUpdate(double deltaTime) { }
