--- a/website/blog/2024-02-14-test.md
+++ b/website/blog/2024-02-14-test.md
@@ -12,6 +12,7 @@ image: https://i.imgur.com/mErPwqL.png
 hide_table_of_contents: false
 ---
 
-Blogs will still be reinplemented! sorry!
+🚧 UNDER CONSTRUCTION 🚧 \
+Blogs will be back soon!
 
 <!-- truncate -->
