--- a/website/blog/2024-02-14-test.md
+++ b/website/blog/2024-02-14-test.md
@@ -1,7 +1,7 @@
 ---
 title: Still in development!
-description: This is my first post on Docusaurus.
-slug: welcome-docusaurus-v2
+description: inDev
+slug: inDev
 authors:
   - name: Lumi
     url: https://github.com/lumi2021
