--- a/docs/for-contributors/README.mdx
+++ b/docs/for-contributors/README.mdx
@@ -1,3 +1,9 @@
+---
+title: "Overview"
+---
+
+import DocCardList from '@theme/DocCardList';
+
 # The Silk.NET Contributors Guide
 
 Welcome to the Silk.NET project! We're so glad you want to help us create the best native interoperation experience that
@@ -9,8 +15,8 @@ the codebase and hit the ground running.
 ## Table of Contents
 
 - [Getting Started (you are here!)](#getting-started)
+- [Contribution Process](../CONTRIBUTING.md)
 - [Build System](build-system.md)
-
 
 ## Getting Started
 
@@ -55,3 +61,4 @@ where the values for the `-s` arguments are replaced with the job names (the key
 For more information on SilkTocuh arguments, consult the [SilkTouch User Guide](../silktouch) or use
 `dotnet run --project sources/SilkTouch/SilkTouch/Silk.NET.SilkTouch.csproj -- --help`.
 
+<DocCardList />
