--- a/docs/for-contributors/README.mdx
+++ b/docs/for-contributors/README.mdx
@@ -3,6 +3,7 @@ title: "Overview"
 ---
 
 import DocCardList from '@theme/DocCardList';
+import { useCurrentSidebarCategory } from '@docusaurus/theme-common';
 
 # The Silk.NET Contributors Guide
 
@@ -61,4 +62,4 @@ where the values for the `-s` arguments are replaced with the job names (the key
 For more information on SilkTocuh arguments, consult the [SilkTouch User Guide](../silktouch) or use
 `dotnet run --project sources/SilkTouch/SilkTouch/Silk.NET.SilkTouch.csproj -- --help`.
 
-<DocCardList />
+<DocCardList items={useCurrentSidebarCategory().items.filter((e) => e.label != "Overview")} />
