More URL tweaks

--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -2,7 +2,7 @@
 title: "Welcome"
 id: "index"
 description: 'Get Started with Silk.NET'
-slug: '/docs'
+slug: '/'
 ---
 
 import DocCardList from '@theme/DocCardList';
